<resources>
    <string name="app_name">s328084s333761Mappe2</string>
    <string name="preferanser">Preferanser</string>
    <string name="kontakter">Kontakter</string>
    <string name="møter">Møter</string>
    <string name="varsel_tjeneste">Varsel-Tjeneste</string>
    <string name="klokkeslett">Klokkeslett</string>
    <string name="broadcast">com.example.mappe2.mittbroadcast</string>
    <string name="varsel_nøkkel">varselNøkkel</string>
    <string name="klokkeslett_nøkkel">klokkeslettNøkkel</string>
    <string name="klokkeslett_summary">Velg tidspunkt for møtevarsel</string>
    <string name="klokkeslett_default">8</string>
    <string name="møter_notif">Møter i dag</string>
    <string name="innNavn">Navn</string>
    <string name="innTlf">Telefonnummer</string>
    <string name="innType">Type møte</string>
    <string name="innSted">Sted</string>
    <string name="leggTil">Legg til</string>
    <string name="slett">Slett</string>
    <string name="visAlle">Vis alle</string>
    <string name="oppdater">Oppdater</string>
    <string name="leggTilMøte">Nytt møte</string>
    <string name="leggTilKontakt">Ny kontakt</string>
    <string name="velgDato">Velg dato</string>
    <string name="velgTidspunkt">Velg tidspunkt</string>
    <string name="møteIkkeFyltUt">Du må fylle inn alle feltene</string>
    <string name="deltakerListeTittel">Velg møtedeltakere</string>
    <string name="slettMøte">Slett</string>
    <string name="endreMøte">Endre</string>
    <string name="slettKontakt">Slett kontakt</string>
    <string name="endreKontakt">Endre kontakt</string>
    <string name="deltakere">Deltakere:</string>
    <string name="standard_varsel">Hei. Minner om møte med meg i dag.</string>
    <string name="varsel_tekst_nøkkel">varselTekst</string>
    <string name="varsel_tekst_tittel">Varseltekst</string>
    <string name="varsel_tekst_summary">Skriv inn varseltekst her</string>
</resources>