<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:enabled="true"
        android:key="example_key"
        android:selectable="false"
        android:summary=""
        android:title="@string/preferanser" />
    <ListPreference
        android:defaultValue="@string/klokkeslett_default"
        android:entries="@array/klokkeslett_entries"
        android:entryValues="@array/klokkeslett_values"
        android:key="@string/klokkeslett_nøkkel"
        android:summary="@string/klokkeslett_summary"
        android:title="@string/klokkeslett" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/sms_nøkkel"
        android:title="@string/sms_tjeneste" />

</PreferenceScreen>