<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innType" />

        <EditText
            android:id="@+id/typeinn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/innType" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innSted" />

        <EditText
            android:id="@+id/stedinn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/innSted" />

        <Button
            android:id="@+id/dato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="visDato"
            android:text="@string/velgDato" />

        <TextView
            android:id="@+id/datoBoks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/tidspunkt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="visTidspunkt"
            android:text="@string/velgTidspunkt" />

        <TextView
            android:id="@+id/tidBoks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/deltakerListeTittel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deltakerListeTittel" />

        <ListView
            android:id="@+id/leggTilDeltakerListe"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/valgtliste"
            android:choiceMode="multipleChoice"
            android:listSelector="#666666" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/leggtil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="leggtil"
            android:text="@string/leggTil" />

    </LinearLayout>

</LinearLayout>
