<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/innNavn" />
    <EditText
        android:id="@+id/navninn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/innTlf" />
    <EditText
        android:id="@+id/telefoninn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/endreKnapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="endre"
        android:text="@string/endreKontakt"/>
</LinearLayout>