<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_moter">

    <fragment
        android:id="@+id/navigation_kontakter"
        android:name="com.example.s328084s333761mappe2.KontaktListeFragment"
        android:label="@string/kontakter"
        tools:layout="@layout/kontakt_activity_layout" />

    <fragment
        android:id="@+id/navigation_moter"
        android:name="com.example.s328084s333761mappe2.ListeFragment"
        android:label="@string/møter"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_preferanser"
        android:name="com.example.s328084s333761mappe2.SettPreferanser$PrefsFragment"
        android:label="@string/preferanser"
         />
    <action
        android:id="@+id/preferanser_action"
        app:destination="@id/navigation_preferanser">

    </action>
</navigation>